# v0.9.6 8 November 2015
Added roc plot

# v0.9.5 27 September 2015
Zoo object does not inherit cllr object anymore (there was no need to do so anyway).
Cleaned up code thus adhering to python coding standards a bit more.

# v0.9.4 Tue September 20. 2015
Improved positioning of labels in zoo plot, simplified code to do so quite a bit.
Improved position of legend in accuracy and ranking plot.
Improved scaling of reference and unit ellipses in zoo plot.
Added helper circles to zoo plot.
Paired colors of plot lines in eer plot and histograms.
Added cllr to legend of EER plot for multi and single condition experiments.
Added cllrMin to legend of Zoo and EER plot for multi and single condition experiments.
Added quite a bit of text to the doc(rst) files.
Added some conversion scripts: bv2bioplot.py, sretools2bioplot.py and vocalize2bioplot.py
Updated anonymize.py to use the sha256 function.
Made label click more selective. Added label fields.
Cleaned up settings files.
On OSX install of scikit-learn is required.
Changed html_theme to 'bootstrap' for sphinx html doc (see https://github.com/ryan-roemer/sphinx-bootstrap-theme).
Generated man pages for OSX and linux in bioplot/doc/_build/man/bioplot.1

# v0.9.3 August 2015
Added EER and Cllr to legend of Zoo plot for multi and single condition experiments.
Added UPDATE section to docs.
Added screen resolution variable to config file to properly position legend text.
Added choice for number of bins in histogram.
Added threading to writing target and non target data to disk.
Expanded use of meta data specific results in zoo plot.
Added nr of targets and nr of non targets to animal files.
Added nr of targets and nr of non targets to labels in zoo plot.
Added stdev scores to labels in zoo plot.
When adding labels to the command line, the connecting lines are fatter and less opaque then for the other labels.
Replaced use of color map by list of user defined colours (in hex or decimal).